--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Simon Says</title>
 </head>
 <body>
-    <h1>è una settimana dispari.</h1>
+    <h1 id="rdnNumber"></h1>
+    <h3 id="countdown"></h3>
     <script src="js/main.js"></script>
 </body>
 </html>
